test result adjustments
